--- a/SilverTest/SilverTest/WelcomeYou.xaml
+++ b/SilverTest/SilverTest/WelcomeYou.xaml
@@ -26,7 +26,7 @@
                 <TextBlock VerticalAlignment="Center" Margin="0 0 0 0"
                         FontSize="25" FontFamily="Monotype Corsiva"
                         TextAlignment="Center"
-                        >QM201H V2.0 荧光测试仪器
+                        >QM201G 荧光测试仪器
                 </TextBlock>
             <StackPanel Height="250" Background="#FFB4DCFD" >
                 <Image Width="300" DockPanel.Dock="Left" Source="images/zong1.bmp" Margin="0,40,0,0"></Image>
